fix hover on mobile profile page

--- a/ivatar/static/css/libravatar_base.css
+++ b/ivatar/static/css/libravatar_base.css
@@ -833,25 +833,33 @@ h3.panel-title{
     padding-top: 20px;
   }
 }
+.profile-container:hover {
+  cursor: pointer;
+}
 .profile-container.active > h3{
   padding-top: 12px;
 }
-.profile-container:hover, .profile-container.active{
+.profile-container.active{
   cursor: pointer;
   background: #dcdcdcb5;
 }
 .profile-container.active:hover{
   cursor:auto;
 }
-.profile-container:hover ul {
-  display:block !important;
-}
-.profile-container:hover img{
-  max-height:120px;
-  max-width:120px;
-}
-.profile-container:hover h3{
-  padding-top: 12px;
+@media only screen and (min-width: 768px) {
+  .profile-container:hover ul {
+    display:block !important;
+  }
+  .profile-container:hover {
+    background: #dcdcdcb5;
+  }
+  .profile-container:hover img{
+    max-height:120px;
+    max-width:120px;
+  }
+  .profile-container:hover h3{
+    padding-top: 12px;
+  }
 }
 .alert-success {
     color: #353535;
